docs: update README JEP links; ci: use JDK 25
README:
Link JEP474 to ZGC examples in
app/build.gradle.kts
 and
tcp-gameserver/build.gradle.kts
.
Condense JEP471 and add examples: FFM (native/.../TicTacToeGameBoard.java, native/.../TicTacToeLibrary.java), Cleaner (native/.../TicTacToeGameBoard.java), VarHandles (api/.../PlayerIds.java).
Add Related link to overengineering-tictactoe-microservices.
CI:
Set up JDK 25 in
.github/workflows/gradle-publish-github.yml
 and
.github/workflows/gradle-publish-maven.yml
.